[B]1.1.0[/B]
****Kodi Helix builds only****
- [UPDATED] addonbrowser.xml
- [UPDATED] DialogAddonInfo.xml
- [UPDATED] DialogContentSettings.xml
- [UPDATED] DialogMediaFilter.xml
- [UPDATED] DialogMediaSource.xml
- [UPDATED] DialogNetworkSetup.xml
- [UPDATED] DialogPeripheralSettings.xml
- [UPDATED] DialogPVRTimerSettings.xml
- [UPDATED] Font.xml
- [UPDATED] SmartPlaylistEditor.xml
- [UPDATED] SmartPlaylistRule.xml
- [UPDATED] VideoOSDSettings.xml 
- [UPDATED] DialogKeyboard.xml
- [UPDATED] DialogNumeric.xml
- [UPDATED] SettingsCategory.xml
- [UPDATED] VideoFullScreen.xml
- [UPDATED] LockSettings.xml
- [UPDATED] ProfileSettings.xml
- [UPDATED] PVR

- Various tweaks and fixes
- Skin widgets addon dependency replaced with library data provider

[B]1.0.8[/B]
- Reworked song rating screen
- Various little tweaks

[B]1.0.7[/B]
- EPG grid fixed (thanks JurialMunkey)
- Tweaks

[B]1.0.6[/B]
- [MODIFIED] Play / pause icons reversed on music / video OSDs
- [MODIFIED] Default background on addon info screen if no fanart available
- [MODIFIED] Slight tweak to colour scheme on keyboard / numeric keypad
- [NEW SKIN SETTING] Disable fanart animation for low powered devices 
- [FIXED] Issue where selecting recent content sometimes failed to focus menu
- [MODIFIED] Aspect ratio for addon images adjusted for better flexibility
- [MODIFIED] Busy graphic replaced for less CPU usage
- [MODIFIED] Video OSD buttons adjusted for non-PVR users
- Various tweaks and tidying up

[B]1.0.5[/B]
- [NEW] Cyrillic font support
- [NEW] Skinned support for Rom Collection Browser addon (some RCB setup dialogs still need work). 
- [MODIFIED] VideoOSD revised
- [MODIFIED] MusicOSD revised
- [NEW] Minimised view for Music now playing screen (thanks Adam)
- [NEW] PVR Channel numbers added to PVR listings (thank Cyrils)
- [NEW] PVR Channel name and number added to videoOSD (thanks Cyrils)
- [MODIFIED] Numeric keyboard now defaults to 'DONE' for benefit of remote control users (thanks Cyrils)