@@ -45,14 +45,54 @@
                 <shadowcolor>-</shadowcolor>
             </control>
 			<control type="grouplist">
-				<posx>18-col-gutter</posx>
+				<posx>5-col-gutter</posx>
                 <posy>44</posy>
+				<width>20-col</width>
 				<orientation>horizontal</orientation>
-                <control type="button" id="5">
+				<control type="radiobutton" id="6">
                     <aligny>center</aligny>
                     <height>57</height>
-					<width>6-col</width>
-                    <font>regular</font>
+					<width>4-col</width>
+                    <font>smallStrong</font>
+                    <label>25000</label>
+                    <textcolor>black</textcolor>
+                    <focusedcolor>selected</focusedcolor>
+                    <texturefocus>colors/black.png</texturefocus>
+                    <textoffsetx>12</textoffsetx>
+                    <textoffsety>-6</textoffsety>
+                    <ondown>9999</ondown>
+                </control>
+				<control type="radiobutton" id="7">
+                    <aligny>center</aligny>
+                    <height>57</height>
+					<width>4-col</width>
+                    <font>smallStrong</font>
+                    <label>25001</label>
+                    <textcolor>black</textcolor>
+                    <focusedcolor>selected</focusedcolor>
+                    <texturefocus>colors/black.png</texturefocus>
+                    <textoffsetx>12</textoffsetx>
+                    <textoffsety>-6</textoffsety>
+                    <ondown>9999</ondown>
+                </control>
+				<control type="radiobutton" id="8">
+                    <aligny>center</aligny>
+                    <height>57</height>
+					<width>5-col</width>
+                    <font>smallStrong</font>
+                    <label>24999</label>
+                    <textcolor>black</textcolor>
+                    <focusedcolor>selected</focusedcolor>
+                    <texturefocus>colors/black.png</texturefocus>
+                    <textoffsetx>12</textoffsetx>
+                    <textoffsety>-6</textoffsety>
+                    <ondown>9999</ondown>
+                </control>
+				<control type="button" id="5">
+                    <aligny>center</aligny>
+                    <height>57</height>
+					<width>5-col</width>
+                    <font>smallStrong</font>
                     <label>24063</label>
                     <textcolor>black</textcolor>
                     <focusedcolor>selected</focusedcolor>
@@ -64,7 +104,7 @@
             </control>
             <!--content listing-->
             <control type="group" id="9999">
-				<onup>5</onup>
+				<onup>6</onup>
 				<posx>0</posx>
                 <posy>-50</posy>
                 <include>viewDialogList</include>
