@@ -40,7 +40,7 @@
                 <description>message</description>
                 <posx>24</posx>
                 <posy>22</posy>
-                <font>pageTitle</font>
+                <font>dialogTitle</font>
                 <textcolor>black</textcolor>
                 <width>468</width>
                 <height>1-row</height>
