@@ -4,7 +4,7 @@
 		<import addon="xbmc.gui" version="5.3.0"/>
 		<import addon="script.globalsearch" version="1.1.1"/>
 		<import addon="script.artistslideshow" version="1.5.0"/>
-		<import addon="service.library.data.provider" version="0.0.1"/>
+		<import addon="service.library.data.provider" version="0.0.4"/>
 	</requires>
 	<extension point="xbmc.gui.skin" defaultthemename="textures.xbt" debugging="false">
 	    <res width="1920" height="1080" aspect="16:9" default="true" folder="1080i" />
